--- a/index.html
+++ b/index.html
@@ -1,30 +1,93 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <title>Inicio || Fundación Niño y Cáncer</title>
-    <meta charset="UTF-8">
-    <meta name="title" content="Título de la WEB">
-    <meta name="description" content="Descripción de la WEB">
-    <link href="http://dominio.com/hoja-de-estilos.css" rel="stylesheet" type="text/css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <!-- Latest compiled and minified CSS -->
-   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-   <!-- Optional theme -->
-   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-   <!-- Latest compiled and minified JavaScript -->
-   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1></h1>
-    </header>
-    <nav>
-
-    </nav>
-
-    <footer>
-
-    </footer>
-  </body>
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <title> titulo</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="estilofnc.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="js/bootstrap.min.js"></script>
+</head>
+<header>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Fundación Niño y Cáncer</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Nosotros</a></li>
+          <li><a href="#">Noticias</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+</header>
+<body>
+  <div class="jumbotron">
+    <h1>Dona acá tus 7 lucas</h1>
+    <p>Toda las Sonrisas son gratis pero tu dona una!!</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  </div>
+  <!--div class="container"-->
+  <div class="row">
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="..." alt="...">
+        <div class="caption">
+          <h3>Haga su donación "deposite aquí"</h3>
+          <p>...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="images/cuidado.jpg" alt="...">
+        <div class="caption">
+          <h3>Renovación de Unidades de Oncología Infantil</h3>
+          <p>Hospital San Juan de Dios Hospital de Concepción Hospital San Borja Arriarán</p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="images/familia.jpg" alt="...">
+        <div class="caption">
+          <h3>Manual para Padres de niños Oncológicos</h3>
+          <p>Descargue este manual de información básica sobre la enfermedad, tratamiento, cuidados en el hogar y manejo del impacto de la enfermedad.</p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <img src="images/corona.jpg" alt="...">
+        <div class="caption">
+          <h3>Coronas de Caridad Fundación Niño y Cáncer</h3>
+          <p>Entregue condolencias los deudos a través de nuestras tarjetas. Conozca los nuevos diseños.</p>
+          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--/div-->
+</body>
 </html>
