ADD:modificacion index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title> titulo</title>
+  <title>Inicio || Fundación Niño y Cáncer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
@@ -41,19 +41,19 @@
 </header>
 <body>
   <div class="jumbotron">
-    <h1>Dona acá tus 7 lucas</h1>
-    <p>Toda las Sonrisas son gratis pero tu dona una!!</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    <h1 style="color:#a54a84; text-align:center;">Dona acá tus 7 lucas</h1>
+    <p style="color:#ce95b6; text-align:center;">Toda las Sonrisas son gratis pero tu dona una!!</p>
+    <p style="text-align:center;"><a class="btn btn-primary btn-lg" href="#" role="button">Más información</a></p>
   </div>
   <!--div class="container"-->
   <div class="row">
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <img src="..." alt="...">
+        <img src="images/donacion.jpg" alt="...">
         <div class="caption">
-          <h3>Haga su donación "deposite aquí"</h3>
-          <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <h3 style="text-align:center">Haga su donación "deposite aquí"</h3>
+          <p>Aportando dinero en forma automática. Tenemos convenio de débito interbancario, donde el socio firma un mandato en el que se compromete a realizar donación mensual que se descuenta a través de su cuenta corriente. </p>
+          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
         </div>
       </div>
     </div>
@@ -61,9 +61,9 @@
       <div class="thumbnail">
         <img src="images/cuidado.jpg" alt="...">
         <div class="caption">
-          <h3>Renovación de Unidades de Oncología Infantil</h3>
-          <p>Hospital San Juan de Dios Hospital de Concepción Hospital San Borja Arriarán</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <h3 style="text-align:center">Renovación de Unidades de Oncología Infantil</h3>
+          <p>Hospital San Juan de Dios <br/>Hospital de Concepción <br/>Hospital San Borja Arriarán</p>
+          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
         </div>
       </div>
     </div>
@@ -71,9 +71,9 @@
       <div class="thumbnail">
         <img src="images/familia.jpg" alt="...">
         <div class="caption">
-          <h3>Manual para Padres de niños Oncológicos</h3>
+          <h3 style="text-align:center">Manual para Padres de niños Oncológicos</h3>
           <p>Descargue este manual de información básica sobre la enfermedad, tratamiento, cuidados en el hogar y manejo del impacto de la enfermedad.</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
         </div>
       </div>
     </div>
@@ -81,13 +81,23 @@
       <div class="thumbnail">
         <img src="images/corona.jpg" alt="...">
         <div class="caption">
-          <h3>Coronas de Caridad Fundación Niño y Cáncer</h3>
+          <h3 style="text-align:center">Coronas de Caridad Fundación Niño y Cáncer</h3>
           <p>Entregue condolencias los deudos a través de nuestras tarjetas. Conozca los nuevos diseños.</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
         </div>
       </div>
     </div>
   </div>
-<!--/div-->
-</body>
-</html>
+  <!--/div-->
+  <div "container" style="background-color:lavenderblush;">
+    <div class="row">
+      <div class="col-sm-4">Contacto</div>
+      <p>Dirección:Tupungato 10070 Vitacura, Santiago de Chile
+        Teléfonos: 22170821 - 22170811
+        Fax: 22170820
+        Email: fundacion@ninoycancer.cl</p>
+        <div class="col-sm-8">Ubicación</div>
+      </div>
+    </div>
+  </body>
+  </html>
