WIP:avances de la pagina de inicio y la pagina de noticias

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Inicio || Fundación Niño y Cáncer</title>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -29,9 +31,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="#">Noticias</a></li>
+          <li class="active"><a href="index.html">Inicio<span class="sr-only">(current)</span></a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="noticias.html">Noticias</a></li>
         </ul>
       </li>
     </ul>
@@ -90,13 +92,14 @@
   </div>
   <!--/div-->
   <div "container" style="background-color:lavenderblush;">
-    <div class="row">
-      <div class="col-sm-4">Contacto</div>
-      <p>Dirección:Tupungato 10070 Vitacura, Santiago de Chile
-        Teléfonos: 22170821 - 22170811
-        Fax: 22170820
-        Email: fundacion@ninoycancer.cl</p>
-        <div class="col-sm-8">Ubicación</div>
+      <div class="row">
+        <div class="col-sm-3 col-md-6">
+          <h4>Contacto:</h4>
+
+        </div>
+        <div class="col-sm-9 col-md-6">
+          <h4>ubicación</4>
+        </div>
       </div>
     </div>
   </body>
