ADD:se agrega iframe google maps

--- a/noticias.html
+++ b/noticias.html
@@ -94,26 +94,25 @@ Este año fue realmente un éxito. Participaron niños desde Antofagasta a Punta
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
-      <img class="media-object" src="images/not1.jpg" alt="...">
+      <img class="media-object" src="images/not2.jpg" alt="...">
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">“Encuentro con la Montaña”</h4>
-    <p>Se efectuó recientemente entre el 10 y 13 de Septiembre. Fue un gran logro ya que en los últimos 2 años no se había podido efectuar por problemas de infraestructura.
-Este año fue realmente un éxito. Participaron niños desde Antofagasta a Punta Arenas. En total asistieron 65 personas. Esperamos que el próximo año participen también los pacientes de Arica.[...]</p>
+    <h4 class="media-heading">A volar con Sky</h4>
+    <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.
+En la foto: CEO de Sky Holger Paulmann y una paciente de oncología[...]</p>
   </div>
 </div>
 <!--noticia3-->
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
-      <img class="media-object" src="images/not1.jpg" alt="...">
+      <img class="media-object" src="images/not3.jpg" alt="...">
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">“Encuentro con la Montaña”</h4>
-    <p>Se efectuó recientemente entre el 10 y 13 de Septiembre. Fue un gran logro ya que en los últimos 2 años no se había podido efectuar por problemas de infraestructura.
-Este año fue realmente un éxito. Participaron niños desde Antofagasta a Punta Arenas. En total asistieron 65 personas. Esperamos que el próximo año participen también los pacientes de Arica.[...]</p>
+    <h4 class="media-heading">Taller de Ski</h4>
+    <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría 2018. En esta oportunidad 3 niños Ecuatorianos[...]</p>
   </div>
 </div>
 </div>
