--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
 
         </div>
         <div class="col-sm-9 col-md-6">
-          <h4>ubicación</4>
+          <h4>ubicación:</4>
+            <div class="embed-responsive embed-responsive-4by3">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2321.958263326811!2d-70.53805695147587!3d-33.383908840486605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1542129520814" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
         </div>
       </div>
     </div>
