ADD: se agrega formulario de contacto en el footer

--- a/index.html
+++ b/index.html
@@ -114,9 +114,17 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <h4>Redes Sociales</h4>
-          <p>Lorem ipsum dolor..</p>
-          <p>Ut enim ad..</p>
+          <h4>Formulario de Contacto</h4>
+          <div class="form-group">
+            <label for="exampleInputEmail1">E-mail</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          </div>
+          <div class="form-group">
+          <textarea class="form-control" rows="2">Mensaje</textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
         </div>
         <div class="col-sm-4">
           <h4>Ubicación:</4>
