--- a/noticias.html
+++ b/noticias.html
@@ -57,15 +57,33 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="images/carro1.jpeg" alt="Los Angeles">
+        <img src="images/carro1.jpeg" alt="Noticia 1">
+        <div class="carousel-caption">
+          <h3>“Encuentro con la Montaña”</h3>
+          <h4>Segunda etapa Montaña de la Alegría, 2018</h4>
+          <p>Se efectuó recientemente entre el 10 y 13 de Septiembre. Fue un gran logro ya que en los últimos 2 años no se había podido efectuar por problemas de infraestructura.</p>
+          <button type="button" class="btn btn-primary active">seguir leyendo</button>
+        </div>
       </div>
 
       <div class="item">
-        <img src="images/carro1.jpeg" alt="Los Angeles">
+        <img src="images/carro1.jpeg" alt="Noticia 2">
+        <div class="carousel-caption">
+          <h3>A volar con Sky</h3>
+          <h4></h4>
+          <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+          <button type="button" class="btn btn-primary active">Ver noticia completa</button>
+        </div>
       </div>
 
       <div class="item">
-        <img src="images/carro1.jpeg" alt="Los Angeles">
+        <img src="images/carro1.jpeg" alt="Noticia 3">
+        <div class="carousel-caption">
+          <h3>Taller de Ski</h3>
+          <h4></h4>
+          <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría 2018. En esta oportunidad 3 niños Ecuatorianos, una niña Boliviana [...]</p>
+          <button type="button" class="btn btn-primary active">seguir leyendo</button>
+        </div>
       </div>
     </div>
 
@@ -138,11 +156,11 @@
               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
             </div>
             <div class="form-group">
-            <textarea class="form-control" rows="2">Mensaje</textarea>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </div>
+              <textarea class="form-control" rows="2">Mensaje</textarea>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
           </div>
           <div class="col-sm-4">
             <h4>Ubicación:</4>
@@ -153,5 +171,5 @@
           </div>
         </div>
         <!--footer-->
-    </body>
-    </html>
+      </body>
+      </html>
