ADD:modificacion de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -41,27 +41,43 @@
 </div><!-- /.container-fluid -->
 </nav>
 </header>
-<body>
+<body style="background-color:#eaecf8">
+  <!--nosotros-->
+    <div class="container" style="background-color:lavenderblush;padding: 40px;">
+      <h3>Historia</h3>
+      <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.
+En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+    </div>
+    <div class="container" style="background-color:#abe1fb">
+      <img src="images/mision.png" class="img-responsive" alt="Responsive image">
+      <h4>Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e internacional, dan las líneas generales del trabajo de la Fundación.</h4>
+    </div>
+  <!--nosotros-->
   <!--footer-->
   <div class="container-fluid" style="background-color:#eaecf8; padding: 40px;">
     <div class="row">
       <div class="col-sm-4">
         <h4>Contacto:</h4>
-        <p>Teléfonos: 22170821 - 22170811<br/>
-          Fax: 22170820<br/>
-          Cta. Cte: Banco BCI N° 85999997<br/>
-          RUT: 72.169.900-5<br/>
-          Email: fundacion@ninoycancer.cl<br/>
+        <p><strong>Teléfonos:</strong> 22170821 - 22170811<br/>
+          <strong>Fax:</strong> 22170820<br/>
+          <strong>Cta. Cte:</strong> Banco BCI N° 85999997<br/>
+          <strong>RUT:</strong> 72.169.900-5<br/>
+          <strong>Email:</strong> fundacion@ninoycancer.cl<br/>
         </p>
       </div>
       <div class="col-sm-4">
         <h4>Formulario de Contacto</h4>
         <div class="form-group">
-          <label for="exampleInputEmail1">E-mail</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          <label for="exampleInputName2">Nombre</label>
+          <input type="text" class="form-control" id="exampleInputName2" placeholder="Ingrese nombre">
         </div>
         <div class="form-group">
-          <textarea class="form-control" rows="2">Mensaje</textarea>
+          <label for="exampleInputEmail1">E-mail</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="ingrese e-mail">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputName2">Mensaje</label>
+          <textarea class="form-control" rows="4">Mensaje</textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Enviar</button>
