--- a/noticias.html
+++ b/noticias.html
@@ -142,21 +142,26 @@
         <div class="row">
           <div class="col-sm-4">
             <h4>Contacto:</h4>
-            <p>Teléfonos: 22170821 - 22170811<br/>
-              Fax: 22170820<br/>
-              Cta. Cte: Banco BCI N° 85999997<br/>
-              RUT: 72.169.900-5<br/>
-              Email: fundacion@ninoycancer.cl<br/>
+            <p><strong>Teléfonos:</strong> 22170821 - 22170811<br/>
+              <strong>Fax:</strong> 22170820<br/>
+              <strong>Cta. Cte:</strong> Banco BCI N° 85999997<br/>
+              <strong>RUT:</strong> 72.169.900-5<br/>
+              <strong>Email:</strong> fundacion@ninoycancer.cl<br/>
             </p>
           </div>
           <div class="col-sm-4">
             <h4>Formulario de Contacto</h4>
             <div class="form-group">
-              <label for="exampleInputEmail1">E-mail</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              <label for="exampleInputName2">Nombre</label>
+              <input type="text" class="form-control" id="exampleInputName2" placeholder="Ingrese nombre">
             </div>
             <div class="form-group">
-              <textarea class="form-control" rows="2">Mensaje</textarea>
+              <label for="exampleInputEmail1">E-mail</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="ingrese e-mail">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputName2">Mensaje</label>
+              <textarea class="form-control" rows="4">Mensaje</textarea>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary">Enviar</button>
