--- a/nosotros.html
+++ b/nosotros.html
@@ -43,14 +43,13 @@
 </header>
 <body style="background-color:#eaecf8">
   <!--nosotros-->
-    <div class="container" style="background-color:lavenderblush;padding: 40px;">
-      <h3>Historia</h3>
-      <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.
-En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+    <div class="container-fluid" style="background-color:lavenderblush; padding: 80px;">
+      <img src="images/hist.png" class="center-block img-responsive" alt="Responsive image">
+      <h4 style="text-align:center">En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</h4>
     </div>
-    <div class="container" style="background-color:#abe1fb">
-      <img src="images/mision.png" class="img-responsive" alt="Responsive image">
-      <h4>Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e internacional, dan las líneas generales del trabajo de la Fundación.</h4>
+    <div class="container-fluid" style="background-color:#abe1fb; padding: 80px;">
+      <img src="images/mision.png" class="center-block img-responsive" alt="Responsive image">
+      <h4 style="text-align:center">El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</h4>
     </div>
   <!--nosotros-->
   <!--footer-->
