ADD:se agregan redes sociales

--- a/noticias.html
+++ b/noticias.html
@@ -148,6 +148,10 @@
               <strong>RUT:</strong> 72.169.900-5<br/>
               <strong>Email:</strong> fundacion@ninoycancer.cl<br/>
             </p>
+           <br/>
+           <h4>Redes Sociales:</h4>
+          <img style="float:left;margin-right:5px;" src="images/facebook.png" class="center-block img-responsive" alt="Responsive image">
+          <img style="float:left;" src="images/twitter.png" class="center-block img-responsive" alt="Responsive image">
           </div>
           <div class="col-sm-4">
             <h4>Formulario de Contacto</h4>
