ADD: modificacion index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col-lg-8">
           <h1 style="color:#a54a84;">Dona acá tus 7 lucas</h1>
-          <p style="color:#ce95b6;">Toda las Sonrisas son gratis pero unas cuestan mas que otras</p>
+          <p style="color:#ce95b6;">Toda las Sonrisas son gratis pero unas cuestan más que otras</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Más información</a></p>
         </div>
       </div>
