ADD: modificacion noticias

--- a/noticias.html
+++ b/noticias.html
@@ -44,7 +44,7 @@
 </div><!-- /.container-fluid -->
 </nav>
 </header>
-<body>
+<body style="background-color:#eaecf8">
   <!--carrusel acá-->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -98,7 +98,7 @@
     </a>
   </div>
   <!--Listado de noticias-->
-  <div class="container-fluid" style="background-color:#abe1fb; padding: 40px;">
+  <div class="container" style="background-color:#eaecf8 padding: 40px;">
     <div class="media" style="background-color:lavenderblush;">
       <div class="media-left media-middle">
         <a href="#">
@@ -112,7 +112,7 @@
         </div>
       </div>
       <!--noticia2-->
-      <div class="media" style="background-color:#eaecf8;">
+      <div class="media" style="background-color:#abe1fb;">
         <div class="media-left media-middle">
           <a href="#">
             <img class="media-object" src="images/not2.jpg" alt="...">
